--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<script type="text/javascript" src="jquery.min.js"></script>
 		<script type="text/javascript" src="lazercatz.js"></script>
+		<script type="text/javascript">$( LC.init );</script>
 		<link rel="stylesheet" type="text/css" href="lazercatz.css" media="screen" />
 	</head>
 	<body>
