--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,13 @@
 		<link rel="stylesheet" type="text/css" href="lazercatz.css" media="screen" />
 	</head>
 	<body>
-		<div id="map">
-			<canvas id="objects" width="500" height="500"></canvas>
+		<div id="contain">
+			<div id="info">
+			</div>
+			<div id="map">
+				<canvas id="objects" width="500" height="500"></canvas>
+			</div>
+			<img src="sprites.png" id="sprites" style="display: none;" />
 		</div>
-		<img src="sprites.png" id="sprites" style="display: none;" />
 	</body>
 </html>
