You can spawn and move now.

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<div id="contain">
 			<div id="info">
+				<sa href="#" onclick="LC.spawn(); return false;">Spawn</a>
 			</div>
 			<div id="map">
 				<canvas id="objects" width="500" height="500"></canvas>
