--- a/static/index.html
+++ b/static/index.html
@@ -7,27 +7,20 @@
 		<link rel="stylesheet" type="text/css" href="lazercatz.css" media="screen" />
 	</head>
 	<body>
+		<a href="http://nodeknockout.com/teams/lazercatz" target="nko" title="Help me win Node.js KO!"><img style="position: fixed; top: 5px; right: 5px; border: 0px;" src="http://nodeknockout.com/images/voteko.png" alt="Help me win Node.js KO!" /></a>
 		<div id="contain">
 			<div id="info">
 				<a href="#" onclick="LC.spawn(); return false;">Spawn</a><br/>
 				<b>Map Offset</b><input id="map-offset" /><br/>
 				<b>User Offset</b><input id="user-offset" /><br/>
 				<b>Edge Proximity</b><input id="edge-proximity" /><br/>
+				<pre id="log-area" style="overflow: scroll; height: 300px;">
+				</pre>
 			</div>
 			<div id="map">
 				<canvas id="objects" width="500" height="500"></canvas>
 			</div>
 			<img src="sprites.png" id="sprites" style="display: none;" />
 		</div>
-		<script type="text/javascript">
-			$.getJSON('/config.json', function(config) {
-				window.fayeTest = new Faye.Client("http://" + window.location.hostname + ':' + config.port + '/faye', {
-					timeout: 120
-				});
-				fayeTest.subscribe('/join', function (message) {
-					console.log("SOMEBODY JOINED!", message);
-				});
-			});
-		</script>
 	</body>
 </html>
