--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
 			<div id="map">
 				<canvas id="objects" width="500" height="500"></canvas>
 			</div>
-			<img src="sprites.png" id="sprites" style="display: none;" />
+			<img src="characters.gif" id="sprites" style="display: none;" />
 		</div>
 	</body>
 </html>
