Big refactor, moved things into an object list instead of tile array based, reliable clear/draw is working.

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
 				<b>Map Offset</b><input id="map-offset" /><br/>
 				<b>User Offset</b><input id="user-offset" /><br/>
 				<b>Edge Proximity</b><input id="edge-proximity" /><br/>
+				<b>Debug</b>
 				<pre id="log-area" style="overflow: scroll; height: 300px;">
 				</pre>
 			</div>
