Bigger map, new layout.

--- a/static/indexNew.html
+++ b/static/indexNew.html
@@ -14,12 +14,6 @@
 			</div>
 			<div id="info">
 				<h1 id="logo">LazerCatz The Game</h1>
-				<!--<b>Map Offset</b><input id="map-offset" /><br/>
-				<b>User Offset</b><input id="user-offset" /><br/>
-				<b>Edge Proximity</b><input id="edge-proximity" /><br/>
-				<b>Debug</b>
-				<pre id="log-area" style="overflow: scroll; height: 300px;">
-				</pre>-->
 				<div id="userList">
 					<ul>
 						<li>Heathcliff</li>
@@ -38,6 +32,7 @@
 					</div>
 				</div>
 			</div>
+			<div id="messages"></div>
 			<img src="characters.gif" id="sprites" style="display: none;" />
 		</div>
 	</body>
