--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div id="messages"></div>
-			<img src="characters.gif" id="sprites" style="display: none;" />
+			<img src="characters.png" id="sprites" style="display: none;" />
 		</div>
 	</body>
 </html>
