--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>LazerCatz - Yes, we know you can cheat.</title>
 		<script type="text/javascript" src="faye.js"></script>
 		<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="lazercatz.js"></script>
