--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,11 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 	</head>
 	<body>
-		<a href="http://nodeknockout.com/teams/lazercatz" target="nko" title="Help me win Node.js KO!"><img style="position: fixed; top: 5px; right: 5px; border: 0px;" src="http://nodeknockout.com/images/voteko.png" alt="Help me win Node.js KO!" /></a>
 		<div id="contain">
+			<a href="http://nodeknockout.com/teams/lazercatz" target="nko" title="Help me win Node.js KO!"><img style="position: fixed; top: 5px; right: 5px; border: 0px;" src="http://nodeknockout.com/images/voteko.png" alt="Help me win Node.js KO!" /></a>
+			<div id="legend">
+				<p>MOVE: arrow keys&nbsp;&nbsp;&nbsp;FIRE: space bar</p>
+			</div>
 			<div id="map">
 				<canvas id="objects" width="680" height="600"></canvas>
 			</div>
