New sprites, new sprite map and finally we have animated walking.

--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div id="messages"></div>
-			<img src="characters.png" id="sprites" style="display: none;" />
+			<img src="characters.gif" id="sprites" style="display: none;" />
 		</div>
 		<script type="text/javascript" src="faye.js"></script>
 		<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
