Added the sound effects.

--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,12 @@
 		<script type="text/javascript" src="faye.js"></script>
 		<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="lazercatz.js"></script>
+		<script type="text/javascript" src="SM2/script/soundmanager2-nodebug-jsmin.js"></script>
+		<script type="text/javascript">
+			soundManager.url = "/SM2/swf/";
+			soundManager.debugMode = false;
+			soundManager.onload = function() { LC.soundReady(); }
+		</script>
 		<script type="text/javascript">$( LC.init );</script>
 	</body>
 </html>
