Pick it up lazer sound...

--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,7 @@
 		<script type="text/javascript" src="SM2/script/soundmanager2-nodebug-jsmin.js"></script>
 		<script type="text/javascript">
 			soundManager.url = "/SM2/swf/";
-			soundManager.debugMode = false;
+			soundManager.useHTML5Audio = true;
 			soundManager.onload = function() { LC.soundReady(); }
 		</script>
 		<script type="text/javascript">$( LC.init );</script>
