And now choose character screen is working.

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,9 @@
 			<div id="start-screen">
 				<img src="selectRight.gif" id="start-select" />
 			</div>
+			<div id="character-screen" style="display: none;">
+				<img src="selectDown.gif" id="character-select" />
+			</div>
 			<div id="game-screen" style="display: none;">
 				<div id="legend">
 					<p>MOVE: arrow keys&nbsp;&nbsp;&nbsp;FIRE: space bar</p>
