--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,11 @@
 			<div id="start-screen">
 				<img src="selectRight.gif" id="start-select" />
 			</div>
+			<div id="credits-screen" style="display: none;">
+			</div>
+			<div id="name-screen" style="display: none;">
+				<img src="goButton.gif" id="go-button" />
+			</div>
 			<div id="character-screen" style="display: none;">
 				<img src="selectDown.gif" id="character-select" />
 			</div>
