Finished the screens.

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 			<div id="credits-screen" style="display: none;">
 			</div>
 			<div id="name-screen" style="display: none;">
-				<img src="goButton.gif" id="go-button" />
+				<input type="text" name="name-input" id="name-input" />
 			</div>
 			<div id="character-screen" style="display: none;">
 				<img src="selectDown.gif" id="character-select" />
