--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>LazerCatz - Yes, we know you can cheat.</title>
-		<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="style.min.css" media="screen" />
 	</head>
 	<body>
 		<div id="contain">
@@ -45,7 +45,7 @@
 		</div><!--// #contain //-->
 		<script type="text/javascript" src="faye.js"></script>
 		<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="lazercatz.js"></script>
+		<script type="text/javascript" src="lazercatz.min.js"></script>
 		<script type="text/javascript" src="SM2/script/soundmanager2-nodebug-jsmin.js"></script>
 		<script type="text/javascript">
 			soundManager.url = "/SM2/swf/";
