--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
 		</div><!--// #contain //-->
 		<script type="text/javascript" src="faye.js"></script>
 		<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="lazercatz.min.js"></script>
+		<script type="text/javascript" src="lazercatz.mainloop.js"></script>
 		<script type="text/javascript" src="SM2/script/soundmanager2-nodebug-jsmin.js"></script>
 		<script type="text/javascript">
 			soundManager.url = "/SM2/swf/";
